--- a/configs/pretrain.yaml
+++ b/configs/pretrain.yaml
@@ -1,8 +1,8 @@
 model:
-  name: "prithvi_mae"
+  name: "mae"
   img_size: 96
   num_channels: 10
-  num_timestamps: 2
+  num_timestamps: 1
 
 dataset:
   batch_size: 1024
@@ -19,11 +19,11 @@ solver:
   learning_rate: 1e-4
   weight_decay:
   warmup_epochs: 40
-  max_epochs: 400
+  max_epochs: 200
   dev_run: False # Set to True for a quick test run
 
 checkpoint:
   save_dir: "/home/gabriel.lima/pretrain_ibge"
-  run_name: "ibge_first_run"
-  ckpt_path:
+  run_name: "ibge_mae"
+  ckpt_path: "/home/gabriel.lima/pretrain_ibge/ibge_mae-epoch=79-train_loss=0.49.ckpt"
   save_checkpoint: True
