--- a/configs/train_config.yaml
+++ b/configs/train_config.yaml
@@ -13,7 +13,8 @@ dataset:
   validate: True
   batch_size: 32
   num_workers: 4
-  data_dir: "/pgeoprj2/godeep/ewab/datasets/capitao_poco"
+  data_dir: "/pgeoprj2/godeep/ewab/datasets/IBGE_dataset"
+  city_id: 1502301
 
 solver:
   name: "adam"
